--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 					</li>
 				</li>
-				<li ng-class="{ active: isActive('/') }">
+				<li ng-class="{ active: isActive('/map') }">
 					<a ui-sref="map"><i class="fa fa-dashboard"></i> <span>Map</span></i></a>
 				</li>
 			</ul>
