--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/adminlte/skins/_all-skins.min.css" />
 
 	<!-- Font Awesome -->
-	<link rel="stylesheet" href="css/font-awesome-4.3.0/css/font-awesome.min.css" />
+	<link rel="stylesheet" href="css/font-awesome-4.4.0/css/font-awesome.min.css" />
 
 	<!-- My Own CSS -->
 	<link rel="stylesheet" href="css/style.css" />
@@ -108,7 +108,7 @@
 					</li>
 				</li>
 				<li ng-class="{ active: isActive('/map') }">
-					<a ui-sref="map"><i class="fa fa-dashboard"></i> <span>Map</span></i></a>
+					<a ui-sref="map"><i class="fa fa-map-o"></i> <span>Map</span></i></a>
 				</li>
 			</ul>
 		</section>
