latest commit - jonpecson

--- a/index.html
+++ b/index.html
@@ -141,11 +141,29 @@
 	<!-- Smart-Table -->
 	<script src="lib/smart-table/smart-table.min.js"></script>
 
-	
-	
+	<!-- Moment -->
+	<script src="lib/moment/moment.min.js"></script>
+
+
+	<!-- JS PDF -->
+	<script src="lib/jspdf/jspdf.debug.js"></script>
+	<script src="lib/jspdf/split_text_to_size.js"></script>
+	<script src="lib/jspdf/jspdf.plugin.autotable.js"></script>
+	<script src="lib/jspdf/total_pages.js"></script>
+	<script src="lib/jspdf/autoprint.js"></script>
+	<script src="lib/jspdf/jspdf_center_plugin.js"></script>
+
+	<!-- Barango Report -->
+	<script src="lib/barango-report/barango-report.js"></script>
+
+
+
 	<!-- App -->
 	<script src="app.js"></script>
 	<script src="controllers.js"></script>
 	<script src="services.js"></script>
+
+
+
 </body>
 </html>
