--- a/index.html
+++ b/index.html
@@ -1,169 +1,189 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
-	<title>Baranggo - Main</title>
-	<!-- Bootstrap -->
-	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-
-	<!-- AdminLTE -->
-	<link rel="stylesheet" href="css/adminlte/AdminLTE.css" />
-	<link rel="stylesheet" href="css/adminlte/skins/_all-skins.min.css" />
-
-	<!-- Font Awesome -->
-	<link rel="stylesheet" href="css/font-awesome-4.4.0/css/font-awesome.min.css" />
-
-	<!-- My Own CSS -->
-	<link rel="stylesheet" href="css/style.css" />
+    <title>Baranggo - Main</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <!-- AdminLTE -->
+    <link rel="stylesheet" href="css/adminlte/AdminLTE.css" />
+    <link rel="stylesheet" href="css/adminlte/skins/_all-skins.min.css" />
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="css/font-awesome-4.4.0/css/font-awesome.min.css" />
+    <!-- My Own CSS -->
+    <link rel="stylesheet" href="css/style.css" />
 </head>
-<body class="hold-transition skin-blue sidebar-mini" ng-app="baranggoApp" ng-controller="MainCtrl">
-	<header class="main-header">
-		<!-- Logo -->
-		<a href="index2.html" class="logo">
-			<!-- mini logo for sidebar mini 50x50 pixels -->
-			<span class="logo-mini"><b>B</b>g</span>
-			<!-- logo for regular state and mobile devices -->
-			<span class="logo-lg"><b>Baranggo</b></span>
-		</a>
-		<!-- Header Navbar: style can be found in header.less -->
-		<nav class="navbar navbar-static-top" role="navigation">
-			<!-- Sidebar toggle button-->
-			<a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-				<span class="sr-only">Toggle navigation</span>
-			</a>
-			<div class="navbar-custom-menu">
-				<ul class="nav navbar-nav">
-					<!-- User Account: style can be found in dropdown.less -->
-					<li class="dropdown user user-menu">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-							<!-- <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image"> -->
-							<span class="hidden-xs">Alexander Pierce - Admin</span>
-							<i class="fa fa-user fa-fw"></i>
-							<span class="caret"></span>
-						</a>
-						<ul class="dropdown-menu">
-							<!-- User image -->
-							<li class="user-header">
-								<!-- <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"> -->
-								<p>
-									Alexander Pierce - Web Developer
-									<small>Member since Nov. 2012</small>
-								</p>
-							</li>
-							<!-- Menu Body -->
-							<li class="user-body">
-								<div class="col-xs-4 text-center">
-									<a href="#">Followers</a>
-								</div>
-								<div class="col-xs-4 text-center">
-									<a href="#">Sales</a>
-								</div>
-								<div class="col-xs-4 text-center">
-									<a href="#">Friends</a>
-								</div>
-							</li>
-							<!-- Menu Footer-->
-							<li class="user-footer">
-								<div class="pull-left">
-									<a href="#" class="btn btn-default btn-flat">Profile</a>
-								</div>
-								<div class="pull-right">
-									<a href="#" class="btn btn-default btn-flat">Sign out</a>
-								</div>
-							</li>
-						</ul>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</header>
-	<!-- Left side column. contains the logo and sidebar -->
-	<aside class="main-sidebar">
-		<!-- sidebar: style can be found in sidebar.less -->
-		<section class="sidebar">
-			<!-- sidebar menu: : style can be found in sidebar.less -->
-			<ul class="sidebar-menu">
-				<li ng-class="{ active: isActive('/') }">
-					<a ui-sref="home"><i class="fa fa-dashboard"></i> <span>Home</span></i></a>
-				</li>
-				<li ng-class="{ active: isActive('/censuses') }">
-					<a ui-sref="censuses"><i class="fa fa-users"></i> <span>Census</span></i></a>
-				</li>
 
-				<li ng-class="{ active: isActive('/residences') }">
-					<a ui-sref="residences"><i class="fa fa-map-marker"></i> <span>Residences</span></i></a>
-				</li>
-
-				<li class="treeview active">
-					<li ng-class="{ active: isActive('/certificates') }">
-						<a href="#/certificates"><i class="fa fa-certificate"></i> <span>Certificates</span>
+<body class="hold-transition skin-blue sidebar-mini" ng-app="baranggoApp" ng-controller="MainCtrl as vm">
+    <header class="main-header">
+        <!-- Logo -->
+        <a href="index2.html" class="logo">
+            <!-- mini logo for sidebar mini 50x50 pixels -->
+            <span class="logo-mini"><b>B</b>g</span>
+            <!-- logo for regular state and mobile devices -->
+            <span class="logo-lg"><b>Baranggo</b></span>
+        </a>
+        <!-- Header Navbar: style can be found in header.less -->
+        <nav class="navbar navbar-static-top" role="navigation">
+            <!-- Sidebar toggle button-->
+            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+                <span class="sr-only">Toggle navigation</span>
+            </a>
+            <div class="navbar-custom-menu">
+                <ul class="nav navbar-nav">
+                    <!-- User Account: style can be found in dropdown.less -->
+                    <li class="dropdown user user-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <!-- <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image"> -->
+                            <span class="hidden-xs">Alexander Pierce - Admin</span>
+                            <i class="fa fa-user fa-fw"></i>
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <!-- User image -->
+                            <li class="user-header">
+                                <!-- <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"> -->
+                                <p>
+                                    Alexander Pierce - Web Developer
+                                    <small>Member since Nov. 2012</small>
+                                </p>
+                            </li>
+                            <!-- Menu Body -->
+                            <li class="user-body">
+                                <div class="col-xs-4 text-center">
+                                    <a href="#">Followers</a>
+                                </div>
+                                <div class="col-xs-4 text-center">
+                                    <a href="#">Sales</a>
+                                </div>
+                                <div class="col-xs-4 text-center">
+                                    <a href="#">Friends</a>
+                                </div>
+                            </li>
+                            <!-- Menu Footer-->
+                            <li class="user-footer">
+                                <div class="pull-left">
+                                    <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                </div>
+                                <div class="pull-right">
+                                    <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#" ng-click="vm.toggleModal()"><i class="fa fa-gear"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!-- Left side column. contains the logo and sidebar -->
+    <aside class="main-sidebar">
+        <!-- sidebar: style can be found in sidebar.less -->
+        <section class="sidebar">
+            <!-- sidebar menu: : style can be found in sidebar.less -->
+            <ul class="sidebar-menu">
+                <li ng-class="{ active: isActive('/') }">
+                    <a ui-sref="home"><i class="fa fa-dashboard"></i> <span>Home</span></i></a>
+                </li>
+                <li ng-class="{ active: isActive('/censuses') }">
+                    <a ui-sref="censuses"><i class="fa fa-users"></i> <span>Census</span></i></a>
+                </li>
+                <li ng-class="{ active: isActive('/residences') }">
+                    <a ui-sref="residences"><i class="fa fa-map-marker"></i> <span>Residences</span></i></a>
+                </li>
+                <li class="treeview active">
+                    <li ng-class="{ active: isActive('/certificates') }">
+                        <a href="#/certificates"><i class="fa fa-certificate"></i> <span>Certificates</span>
 							<i class="fa fa-angle-left pull-right"></i>
 						</a>
-
-						<ul class="treeview-menu menu-open" style="display: block;">
-						<li><a href="#"><i class="fa fa-angle-right"></i> Baranggay Clearance</a></li>
-						<li><a href="#"><i class="fa fa-angle-right"></i> Baranggay Business Clearance</a></li>
-						<li><a href="#"><i class="fa fa-angle-right"></i> Certificate of Closure</a></li>
-					  </ul>
-
-					</li>
-				</li>
-				<li ng-class="{ active: isActive('/map') }">
-					<a ui-sref="map"><i class="fa fa-map-o"></i> <span>Map</span></i></a>
-				</li>
-			</ul>
-		</section>
-		<!-- /.sidebar -->
-	</aside>
-
-	<div class="wrapper">
-		<div class="content-wrapper">
-			<div ui-view></div>
-		</div>
-	</div>
-
-	<!-- jQuery -->
-	<script src="lib/jQuery/jQuery-2.1.4.min.js"></script>
-
-	<!-- Bootstrap -->
-	<script src="lib/bootstrap/bootstrap.min.js"></script>
-
-	<!-- AdminLTE -->
-	<script src="lib/adminlte/app.min.js"></script>
-
-	<!-- Angular -->
-	<script src="lib/angular-1.3.15/angular.js"></script>
-	<script src="lib/angular-ui-router/angular-ui-router.min.js"></script>
-
-	<!-- Angular Validation -->
-	<script src="lib/angular-validation/angular-validation-rule.min.js"></script>
-	<script src="lib/angular-validation/angular-validation.min.js"></script>
-
-	<!-- Smart-Table -->
-	<script src="lib/smart-table/smart-table.min.js"></script>
-
-	<!-- Moment -->
-	<script src="lib/moment/moment.min.js"></script>
-
-
-	<!-- JS PDF -->
-	<script src="lib/jspdf/jspdf.debug.js"></script>
-	<script src="lib/jspdf/split_text_to_size.js"></script>
-	<script src="lib/jspdf/jspdf.plugin.autotable.js"></script>
-	<script src="lib/jspdf/total_pages.js"></script>
-	<script src="lib/jspdf/autoprint.js"></script>
-	<script src="lib/jspdf/jspdf_center_plugin.js"></script>
-
-	<!-- Barango Report -->
-	<script src="lib/barango-report/barango-report.js"></script>
-
-
-
-	<!-- App -->
-	<script src="app.js"></script>
-	<script src="controllers.js"></script>
-	<script src="services.js"></script>
-
-
-
+                        <ul class="treeview-menu menu-open" style="display: block;">
+                            <li><a href="#/brgy-clearance"><i class="fa fa-angle-right"></i> Baranggay Clearance</a></li>
+                            <li><a href="#/brgy-bus-clearance"><i class="fa fa-angle-right"></i> Baranggay Business Clearance</a></li>
+                            <li><a href="#/cert-of-closure"><i class="fa fa-angle-right"></i> Certificate of Closure</a></li>
+                        </ul>
+                    </li>
+                </li>
+                <li ng-class="{ active: isActive('/map') }">
+                    <a ui-sref="map"><i class="fa fa-map-o"></i> <span>Map</span></i></a>
+                </li>
+            </ul>
+        </section>
+        <!-- /.sidebar -->
+    </aside>
+    <div class="wrapper">
+        <div class="content-wrapper">
+            <div ui-view></div>
+        </div>
+    </div>
+    <modal title="Settings" visible="vm.showSettingsModal">
+        <!-- form start -->
+        <form role="form">
+            <div class="box-body">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="barangay">Barangay</label>
+                            <input class="form-control" id="brgy" type="text" placeholder="Brgy 1" ng-model="vm.settings.brgy">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="city">City</label>
+                            <input class="form-control" id="city" type="text" placeholder="Kabankalan City" ng-model="vm.settings.city">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="province">Province</label>
+                            <input class="form-control" id="province" type="text" placeholder="Negros Occidental" ng-model="vm.settings.province">
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="zip">Zip Code</label>
+                            <input class="form-control" id="zip" type="text" placeholder="6111" ng-model="vm.settings.zip">
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" ng-click="vm.save(vm.settings)">Save changes</button>
+            </div>
+        </form>
+    </modal>
+    <!-- jQuery -->
+    <script src="lib/jQuery/jQuery-2.1.4.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="lib/bootstrap/bootstrap.min.js"></script>
+    <!-- AdminLTE -->
+    <script src="lib/adminlte/app.min.js"></script>
+    <!-- Angular -->
+    <script src="lib/angular-1.3.15/angular.js"></script>
+    <script src="lib/angular-ui-router/angular-ui-router.min.js"></script>
+    <!-- Angular Validation -->
+    <script src="lib/angular-validation/angular-validation-rule.min.js"></script>
+    <script src="lib/angular-validation/angular-validation.min.js"></script>
+    <!-- Smart-Table -->
+    <script src="lib/smart-table/smart-table.min.js"></script>
+    <!-- Moment -->
+    <script src="lib/moment/moment.min.js"></script>
+    <!-- JS PDF -->
+    <script src="lib/jspdf/jspdf.debug.js"></script>
+    <script src="lib/jspdf/split_text_to_size.js"></script>
+    <script src="lib/jspdf/jspdf.plugin.autotable.js"></script>
+    <script src="lib/jspdf/total_pages.js"></script>
+    <script src="lib/jspdf/autoprint.js"></script>
+    <script src="lib/jspdf/jspdf_center_plugin.js"></script>
+    <!-- Barango Report -->
+    <script src="lib/barango-report/barango-report.js"></script>
+    <!-- App -->
+    <script src="app.js"></script>
+    <script src="controllers.js"></script>
+    <script src="services.js"></script>
 </body>
+
 </html>
