latest commit - jonpecson

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <script src="lib/jspdf/autoprint.js"></script>
     <script src="lib/jspdf/jspdf_center_plugin.js"></script>
     <!-- Barango Report -->
-    <script src="lib/barango-report/barango-report.js"></script>
+    <!-- <script src="lib/barango-report/barango-report.js"></script> -->
     <!-- App -->
     <script src="app.js"></script>
     <script src="controllers.js"></script>
