--- a/index.html
+++ b/index.html
@@ -122,6 +122,22 @@
         <!-- form start -->
         <form role="form">
             <div class="box-body">
+
+            <div class="row">
+                 <div class="col-md-3">
+                 <label for="barangay">Barangay Id</label>
+                    <div class="input-group input-group-md add-on">
+                        <input type="text" class="form-control search-query" ng-model="searchKey"  placeholder="Barangay Id">
+
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i class="fa fa-search"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <br>
+
                 <div class="row">
                     <div class="col-md-3">
                         <div class="form-group">
