latest commit - jonpecson

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <input type="text" class="form-control search-query" ng-model="vm.settings.brgyId"  placeholder="Barangay Id">
 
                         <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit" ng-click="vm.getSettings()"><i class="fa fa-search"></i></button>
+                            <button class="btn btn-default" type="submit" ng-click="vm.getSettings(vm.settings.brgyId)"><i class="fa fa-search"></i></button>
                         </div>
                     </div>
                 </div>
