latest commit - jonpecson

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 						</a>
                         
                         <ul class="treeview-menu menu-open" style="display: block;">
-                            <li><a href="#/brgy-clearance"><i class="fa fa-angle-right"></i> Baranggay Clearance</a></li>
-                            <li><a href="#/brgy-bus-clearance"><i class="fa fa-angle-right"></i> Baranggay Business Clearance</a></li>
-                            <li><a href="#/cert-of-closure"><i class="fa fa-angle-right"></i> Certificate of Closure</a></li>
+                            <li><a href="#/brgy-clearance-list"><i class="fa fa-angle-right"></i> Baranggay Clearance</a></li>
+                            <li><a href="#/brgy-bus-clearance-list"><i class="fa fa-angle-right"></i> Baranggay Business Clearance</a></li>
+                            <li><a href="#/cert-of-closure-list"><i class="fa fa-angle-right"></i> Certificate of Closure</a></li>
                         </ul>
                     </li>
                 </li>
