--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <li ng-class="{ active: isActive('/') }">
                     <a ui-sref="home"><i class="fa fa-dashboard"></i> <span>Home</span></i></a>
                 </li>
-                <li ng-class="{ active: isActive('/censuses') }">
-                    <a ui-sref="censuses"><i class="fa fa-users"></i> <span>Census</span></i></a>
+                <li ng-class="{ active: isActive('/persons') }">
+                    <a ui-sref="persons"><i class="fa fa-users"></i> <span>Persons</span></i></a>
                 </li>
                 <li ng-class="{ active: isActive('/residences') }">
                     <a ui-sref="residences"><i class="fa fa-map-marker"></i> <span>Residences</span></i></a>
