latest commit - jonpecson

--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
     <script src="lib/smart-table/smart-table.min.js"></script>
     <!-- Moment -->
     <script src="lib/moment/moment.min.js"></script>
+    <script type="text/javascript" src="lib/angular-moment/angular-moment.min.js"></script>
+    
     <!-- JS PDF -->
     <script src="lib/jspdf/jspdf.debug.js"></script>
     <script src="lib/jspdf/split_text_to_size.js"></script>
