--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="css/font-awesome-4.4.0/css/font-awesome.min.css" />
     <!-- My Own CSS -->
     <link rel="stylesheet" href="css/style.css" />
+
+
+    <!-- Angular JS DatePicker -->
+    <link href="lib/angularjs-datepicker/src/css/angular-datepicker.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini" ng-app="baranggoApp" ng-controller="MainCtrl as vm">
@@ -172,6 +176,10 @@
             </div>
         </form>
     </modal>
+
+
+      
+  
     <!-- jQuery -->
     <script src="lib/jQuery/jQuery-2.1.4.min.js"></script>
     <!-- Bootstrap -->
@@ -181,6 +189,10 @@
     <!-- Angular -->
     <script src="lib/angular-1.3.15/angular.js"></script>
     <script src="lib/angular-ui-router/angular-ui-router.min.js"></script>
+
+    <!-- Angular JS Date picker -->
+    <script src="lib/angularjs-datepicker/src/js/angular-datepicker.js"></script>
+
     <!-- Angular Validation -->
     <script src="lib/angular-validation/angular-validation-rule.min.js"></script>
     <script src="lib/angular-validation/angular-validation.min.js"></script>
@@ -208,6 +220,8 @@
     <script src="app.js"></script>
     <script src="controllers.js"></script>
     <script src="services.js"></script>
+
+
 </body>
 
 </html>
