--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
     <script src="lib/angular-1.3.15/angular.js"></script>
     <script src="lib/angular-ui-router/angular-ui-router.min.js"></script>
 
+    <!-- Angular Confirm Modal -->
+    <script src="bower_components/angular-confirm-modal/angular-confirm.min.js"></script>
+
+    <!-- Angular UI Bootstrap -->
+    <script src="lib/angular-ui-bootstrap/ui-bootstrap-tpls-0.14.3.min.js"></script>
+
     <!-- Angular JS Date picker -->
     <script src="lib/angularjs-datepicker/src/js/angular-datepicker.js"></script>
 
