--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 
     <!-- Angular Confirm Modal -->
-    <script src="lib/angular-confirm-modal/angular-confirm.min.js"></script>
+    <script src="lib/angular-confirm-modal/angular-confirm.js"></script>
 
     <!-- Angular UI Bootstrap -->
     <script src="lib/angular-ui-bootstrap/ui-bootstrap-tpls-0.14.3.min.js"></script>
