--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </li>
                 <li class="treeview active">
                     <li ng-class="{ active: isActive('/certificates') }">
-                        <a href="#/certificates"><i class="fa fa-certificate"></i> <span>Certificates</span>
+                        <a href=""><i class="fa fa-certificate"></i> <span>Certificates</span>
 							<i class="fa fa-angle-left pull-right"></i>
 						</a>
                         
