--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="hold-transition skin-blue sidebar-mini" ng-app="baranggoApp" ng-controller="MainCtrl as vm">
     <header class="main-header">
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a ui-sref="map" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini"><b>B</b>g</span>
             <!-- logo for regular state and mobile devices -->
@@ -33,23 +33,18 @@
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
                     <!-- User Account: style can be found in dropdown.less -->
-                    <li class="dropdown user user-menu">
+                    <!-- <li class="dropdown user user-menu">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <!-- <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image"> -->
                             <span class="hidden-xs">Alexander Pierce - Admin</span>
                             <i class="fa fa-user fa-fw"></i>
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <!-- User image -->
-                            <li class="user-header">
-                                <!-- <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image"> -->
                                 <p>
                                     Alexander Pierce - Web Developer
                                     <small>Member since Nov. 2012</small>
                                 </p>
                             </li>
-                            <!-- Menu Body -->
                             <li class="user-body">
                                 <div class="col-xs-4 text-center">
                                     <a href="#">Followers</a>
@@ -61,7 +56,6 @@
                                     <a href="#">Friends</a>
                                 </div>
                             </li>
-                            <!-- Menu Footer-->
                             <li class="user-footer">
                                 <div class="pull-left">
                                     <a href="#" class="btn btn-default btn-flat">Profile</a>
@@ -71,7 +65,7 @@
                                 </div>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li>
                         <a href="#" ng-click="vm.toggleModal()"><i class="fa fa-gear"></i></a>
                     </li>
@@ -85,9 +79,9 @@
         <section class="sidebar">
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
-                <li ng-class="{ active: isActive('/') }">
+                <!-- <li ng-class="{ active: isActive('/') }">
                     <a ui-sref="home"><i class="fa fa-dashboard"></i> <span>Home</span></i></a>
-                </li>
+                </li> -->
                 <li ng-class="{ active: isActive('/persons') }">
                     <a ui-sref="persons"><i class="fa fa-users"></i> <span>Persons</span></i></a>
                 </li>
